--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
         "coverage": "vitest run --coverage"
     },
     "dependencies": {
+        "@pixi/react": "^7.1.2",
         "@tobenot/basic-web-game-backend-contract": "^1.1.4",
         "@trpc/client": "^11.4.3",
         "@trpc/server": "^11.4.3",
         "@types/react-router-dom": "^5.3.3",
+        "clsx": "^2.1.1",
+        "pixi.js": "^8.14.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^7.6.2"
+        "react-router-dom": "^7.6.2",
+        "zustand": "^5.0.8"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^6.6.3",
